--- a/core/templates/login.html
+++ b/core/templates/login.html
@@ -7,7 +7,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'css/index.css'%}">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 
     <title>Document</title>
 </head>
@@ -15,7 +14,7 @@
     <form action="" method="POST">
         {% csrf_token %}
     {{form}} 
-    <button type="submit" class="btn btn-primary">Submit</button>   
+    <button type="submit" class=''>Submit</button>   
     </form>
 </body>
 </html>
