--- a/core/templates/paginator.html
+++ b/core/templates/paginator.html
@@ -2,9 +2,9 @@
 {% if postspaginator.has_other_pages %}
     <ul class="pagination d-flex justify-content-center">
       {% if postspaginator.has_previous %}
-        <li class="page-item"><a  class="page-link" href="?page={{ postspaginator.previous_page_number }}">&laquo;</a></li>
+        <li class="page-item"><a  class="page-link page-item" href="?page={{ postspaginator.previous_page_number }}">&laquo;</a></li>
       {% else %}
-        <li class="page-item"><span>&laquo;</span></li>
+        <li class="page-item"><span class='page-item'>&laquo;</span></li>
       {% endif %}
       {% for i in postspaginator.paginator.page_range %}
         {% if postspaginator.number == i %}
