--- a/core/templates/login.html
+++ b/core/templates/login.html
@@ -7,14 +7,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'css/index.css'%}">
-
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{% static 'css/index.css'%}">
     <title>Document</title>
 </head>
-<body>
-    <form action="" method="POST">
+
+<body class='align-middle p-5' >
+    <form action="" method="POST" class='' >
         {% csrf_token %}
-    {{form}} 
-    <button type="submit" class=''>Submit</button>   
+        {% for e in form.errors %}
+        {{e}}
+        {% endfor %}
+        <ul class=" list-group d-flex justify-content-center border-0 p-5" style='heigth:200px'>
+            {% for f in form %}
+                <li class="list-group-item d-flex justify-content-xl-center p-4 border-0 " >
+                    <div class="form-group form-inline ">
+                        {{f.errors}}
+                        
+                        <div class="col-sm-10">
+                            {{f}}
+                        </div>
+                    </div>        
+                </li>    
+            {% endfor %}
+            <li class="list-group-item d-flex justify-content-xl-center border-0 " >
+                <button class="btn btn-primary" type="submit" class=''>Entrar</button>   
+            </li>
+        </ul>
     </form>
 </body>
 </html>
