--- a/core/templates/login.html
+++ b/core/templates/login.html
@@ -33,7 +33,7 @@
                 <li class="list-group-item d-flex justify-content-around p-4  border-0" >
                     <div class="form-group form-inline ">                
                         <div class="form-group form-inline ">
-                            <a href="{% url 'registro_view' %}"><button class='btn btn-light'>Cadastrar</button></a>
+                            <a class='btn btn-light' href="{% url 'registro_view' %}">Cadastrar</a>
                             <button class="btn btn-primary" type="submit" class=''>Entrar</button>   
                         </div>
                     </div>        
